--- a/Lesson number 20 Dynamic memory.vcxproj.filters
+++ b/Lesson number 20 Dynamic memory.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lesson number 20 Dynamic memory.cpp">
+    <ClCompile Include="Task 1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Task 2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
