--- a/Lesson number 20 Dynamic memory.vcxproj.filters
+++ b/Lesson number 20 Dynamic memory.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Task 2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Task 3.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
